k8s/deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: projetdocker_crv_movies-backend:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service

spec:
  selector:
    app: backend

  ports:
    - port: 3001
      targetPort: 3001

  type: ClusterIP
